tests/error/ref_class_extend.gw
#! [contains] can't use ref type in class extend
typedef int[] Type;
class C extends Type {
}
